-
Bug
-
Resolution: Fixed
-
P2: Important
-
None
-
6.8.1
-
None
-
-
5cbfbbe43 (dev), d6bfb1b98 (6.9), d7737ffd8 (6.8)
SplineSeries "removeMultiple" method presents itself in the docs as "removePoints", and it breaks the shape of a spline.
Minimal reproducible example:
import QtQuick import QtGraphs Window { width: 640 height: 480 visible: true title: qsTr("Graphs 2D - removeMultiple bug") GraphsView { id: graphsView anchors.fill: parent axisX: ValueAxis {} axisY: ValueAxis {} SplineSeries { id: series1 XYPoint { x: 0.0; y: 9.0 } XYPoint { x: 1.0; y: 3.0 } XYPoint { x: 2.0; y: 7.0 } XYPoint { x: 3.0; y: 1.0 } XYPoint { x: 4.0; y: 8.5 } XYPoint { x: 5.0; y: 2.4 } XYPoint { x: 6.0; y: 6.0 } XYPoint { x: 7.0; y: 1.6 } XYPoint { x: 8.0; y: 9.5 } XYPoint { x: 9.0; y: 3.9 } XYPoint { x: 10.0; y: 9.9 } } } Timer { interval: 1000 running: true repeat: true onTriggered: { series1.removeMultiple(0, 1) // "removePoints" in the docs } } }
For Gerrit Dashboard: QTBUG-132401 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
614133,4 | Fix spline shape braking when removeMultiple is used | dev | qt/qtgraphs | Status: MERGED | +2 | 0 |
615522,2 | Fix spline shape braking when removeMultiple is used | 6.9 | qt/qtgraphs | Status: MERGED | +2 | 0 |
615659,2 | Fix spline shape braking when removeMultiple is used | 6.8 | qt/qtgraphs | Status: MERGED | +2 | 0 |