Fix spline shape braking when removeMultiple is used

Task-number: QTBUG-132401
Change-Id: I189de7d93767fc5ff6de1716ce7360fb30976e52
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
(cherry picked from commit 5cbfbbe43e000f054e2e01be368ef628f1bb2f0b)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit d6bfb1b98b1231604a4082a3d3406b4b996d0071)